--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Il mio Viaggio a Londra</h1>
         </div>
         <!--Immagini Londra-->
-        <img src="img/1.jpg" alt="Londra">
-        <img src="img/2.jpg" alt="Londra">
-        <img src="img/3.jpg" alt="Londra">
+        <img src="./img/1.jpg" alt="Londra">
+        <img src="./img/2.jpg" alt="Londra">
+        <img src="./img/3.jpg" alt="Londra">
         <hr>
         
         <!--Tabella Spese-->
